tests/semantic_cases/invalid/procedure_local_var_shadows_builtin_type.ob0
(* INVALID: procedure-local variable name shadows reserved builtin type name *)
MODULE Main;
PROCEDURE P;
VAR INTEGER: INTEGER;
BEGIN
END P;
BEGIN
  P
END Main.
